src/test/deca/context/valid/created/testUnary.deca
{
    int c = 5;
    int a;
    boolean k = !true;
    //int v = ;
}
