src/test/deca/context/invalid/created/wrong_type_BOOLEAN_INT.deca
{
    boolean a;
    a = 6;
}